.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drpdishant-deployment
  labels:
    app: drpdishant
spec:
  replicas: 
  selector:
    matchLabels:
      app: drpdishant
  template:
    metadata:
      labels:
        app: drpdishant
    spec:
      containers:
      - name: drpdishant
        image: __IMAGE_NAME__
