.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drpdishant-service
spec:
  selector:
    app: drpdishant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
