.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drpdishant-ingress
spec:
  rules:
  - host: drpdishant.github.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: drpdishant-service
            port:
              number: 80
